fixedd speakerline and addresseeline overflow

--- a/src/styles/pages/poemDisplay.module.css
+++ b/src/styles/pages/poemDisplay.module.css
@@ -636,6 +636,9 @@
   padding-left: 5px;
   margin-bottom: -5px;
   margin-top: -3px;
+  overflow-x: auto;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .addresseeLine {
@@ -643,6 +646,9 @@
   align-items: right;
   justify-content: right;
   padding-right: 5px;
+  overflow-x: auto;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .characterLink:hover {
